--- a/babbeblog/templates/blog/post_list.html
+++ b/babbeblog/templates/blog/post_list.html
@@ -5,11 +5,11 @@
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="{% static 'css/blog.css' %}">
 		<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-        <title>Django AE blog</title>
+        <title>AE blog</title>
     </head>
     <body>
 		<div>
-			<h1><a href="/">Django AE Blog</a></h1>
+			<h1><a href="/">AE Blog</a></h1>
 		</div>
 
 		{% for post in posts %}
