APA Changed the HTML for the site.

--- a/babbeblog/templates/blog/post_list.html
+++ b/babbeblog/templates/blog/post_list.html
@@ -9,7 +9,7 @@
     </head>
     <body>
 		<div>
-			<h1><a href="/">AE Blog</a></h1>
+			<h1><a href="/">Modest reading</a></h1>
 		</div>
 
 		{% for post in posts %}
