--- a/babbeblog/templates/blog/post_list.html
+++ b/babbeblog/templates/blog/post_list.html
@@ -9,13 +9,15 @@
     </head>
     <body>
 		<div>
-			<h1><a href="/">Modest reading</a></h1>
+			<h1><a href="/">Enjoy modest reading from here and below</a></h1>
+			<h1><a href="/">(Njut av nedanstående idioti eller fuck off...)</a></h1>
+			
 		</div>
 
 		{% for post in posts %}
 			<div>
 				<p>published: {{ post.published_date }}</p>
-				<h1><a href="">{{ post.title }}</a></h1>
+				<h2><a href="">{{ post.title }}</a></h2>
 				<p>{{ post.text|linebreaksbr }}</p>
 			</div>
 		{% endfor %}
