--- a/babbeblog/templates/blog/post_list.html
+++ b/babbeblog/templates/blog/post_list.html
@@ -10,7 +10,7 @@
     <body>
 		<div>
 			<h1><a href="/">Enjoy modest reading from here and below</a></h1>
-			<h1><a href="/">(Njut av nedanstående idioti eller fuck off...)</a></h1>
+			<h1><a href="/"></a></h1>
 			
 		</div>
 
