--- a/babbeblog/templates/blog/post_list.html
+++ b/babbeblog/templates/blog/post_list.html
@@ -9,7 +9,7 @@
     </head>
     <body>
 		<div>
-			<h1><a href="/">Enjoy modest reading from here and below</a></h1>
+			<h1><a href="/">All möjlig mög etcetera</a></h1>
 			<h1><a href="/"></a></h1>
 			
 		</div>
