--- a/babbeblog/templates/blog/post_list.html
+++ b/babbeblog/templates/blog/post_list.html
@@ -8,10 +8,9 @@
         <title>AE blog</title>
     </head>
     <body>
-		<div>
-			<h1><a href="/">All möjlig mög etcetera</a></h1>
-			<h1><a href="/"></a></h1>
-			
+		<div class="page-header">
+			<h1><a href="/">All möjlig mög etc.</a></h1>
+			<h1><a href="/"></a></h1>	
 		</div>
 
 		<div class="content container">
@@ -26,8 +25,10 @@
 							<p>{{ post.text|linebreaksbr }}</p>
 						</div>
 					{% endfor %}
-				</div>
+				</div>	
 			</div>
-		</div>
+        </div>
+    </div>
+</div>
     </body>
 </html>
