--- a/babbeblog/templates/blog/post_list.html
+++ b/babbeblog/templates/blog/post_list.html
@@ -9,7 +9,7 @@
     </head>
     <body>
 		<div class="page-header">
-			<h1><a href="/">All möjlig mög etc.</a></h1>
+			<h1><a href="/">Årets blog för utvecklingsstörda</a></h1>
 			<h1><a href="/"></a></h1>	
 		</div>
 
