--- a/babbeblog/templates/blog/post_list.html
+++ b/babbeblog/templates/blog/post_list.html
@@ -1,34 +1,16 @@
-<html>
-	{% load staticfiles %}
-    <head>
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="{% static 'css/blog.css' %}">
-		<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-        <title>AE blog</title>
-    </head>
-    <body>
-		<div class="page-header">
-			<h1><a href="/">Årets blog för utvecklingsstörda</a></h1>
-			<h1><a href="/"></a></h1>	
-		</div>
+<html
+{% extends 'blog/base.html' %}
 
-		<div class="content container">
-			<div class="row">
-				<div class="col-md-8">
-					{% for post in posts %}
-						<div class="post">
-							<div class="date">
-								<p>published: {{ post.published_date }}</p>
-							</div>
-							<h1><a href="">{{ post.title }}</a></h1>
-							<p>{{ post.text|linebreaksbr }}</p>
-						</div>
-					{% endfor %}
-				</div>	
+{% block content %}
+	{% for post in posts %}
+		<div class="post">
+			<div class="date">
+				{{ post.published_date }}
 			</div>
-        </div>
-    </div>
-</div>
-    </body>
+			<h1><a href="">{{ post.title }}</a></h1>
+			<p>{{ post.text|linebreaksbr }}</p>
+		</div>
+	{% endfor %}
+{% endblock %}
+
 </html>
